<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:aapt="http://schemas.android.com/aapt"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:id="@+id/tab"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimaryDark">

        <ImageView
            android:id="@+id/imBack"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_centerVertical="true"
            android:layout_margin="0dp"
            android:padding="8dp"
            android:layout_marginLeft="5dp"
            android:tint="@color/white"
            android:src="@drawable/ic_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/heebo_bold"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="@dimen/toolbar_text_size"/>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/how"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/tab"
        android:background="@color/white"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:fontFamily="@font/heebo_medium"
            android:text="@string/howToDownload"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/adViewhow"
        android:layout_below="@+id/how">

        <LinearLayout
            android:id="@+id/howmain"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/tab"
            android:background="@color/white"
            android:orientation="vertical"
            android:paddingLeft="30dp"
            android:paddingEnd="30dp"
            android:paddingRight="30dp"
            android:paddingBottom="30dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/heebo_regular"
                android:text="@string/step_1"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:src="@drawable/step_01" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/heebo_regular"
                android:text="@string/step_2"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:src="@drawable/step_02" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/step_more"
                android:textColor="@color/black"
                android:fontFamily="@font/heebo_regular"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:src="@drawable/step_03" />
        </LinearLayout>
    </ScrollView>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adViewhow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:adSize="BANNER"
        app:adUnitId="@string/admob_banner_ad" />
</RelativeLayout>
