<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:aapt="http://schemas.android.com/aapt"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/RLTopLayout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/colorPrimaryDark"
        android:visibility="visible">

        <RelativeLayout
            android:id="@+id/RLTop"
            android:layout_centerVertical="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imBack"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_centerVertical="true"
                android:layout_margin="0dp"
                android:padding="8dp"
                android:layout_marginLeft="5dp"
                android:tint="@color/white"
                android:src="@drawable/ic_back" />

            <TextView
                android:id="@+id/TVTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="@string/gallery_name"
                android:fontFamily="@font/heebo_bold"
                android:textColor="@color/white"
                android:textSize="@dimen/toolbar_text_size"
                android:textStyle="bold" />
        </RelativeLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/RLTab"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/RLTopLayout"
        android:gravity="center">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:tabGravity="fill"
            app:tabIndicatorHeight="2dp"
            app:tabInlineLabel="true"
            app:tabMode="fixed"
            app:tabIconTint="@color/tab_icon_selector"
            app:tabIndicatorColor="@color/colorPrimary"
            app:tabSelectedTextColor="@color/colorPrimary"
            app:tabTextAppearance="@style/MyTabLayoutTextAppearance"
            app:tabTextColor="@color/black">

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:icon="@drawable/ic_instagram_tab_bg"
                android:text="@string/instagram" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:icon="@drawable/ic_whatsapp_tab_bg"
                android:text="@string/whatsapp" />
        </com.google.android.material.tabs.TabLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/tabs"
            android:background="@color/divider"/>
    </RelativeLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewpager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/adView"
        android:layout_marginTop="8dp"
        android:layout_below="@+id/RLTab" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:adSize="BANNER"
        app:adUnitId="@string/admob_banner_ad" />
</RelativeLayout>
