<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/selected_tab"
        android:backgroundTint="@color/colorPrimaryDark"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/login"
        android:textColor="@color/white" />

    <RelativeLayout
        android:id="@+id/RLTopLayout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentTop="true"
        android:background="@color/colorPrimary">

        <ImageView
            android:id="@+id/imBack"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_centerVertical="true"
            android:contentDescription="TODO"
            android:padding="10dp"
            android:src="@drawable/ic_back"
            android:tint="@color/white" />


        <ImageView
            android:id="@+id/LLOpenInstagram"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:padding="10dp"
            android:src="@drawable/ic_instagram_tab"
            app:tint="@color/white" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/LLDownloadStep"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/RLTopLayout"
        android:layout_marginTop="30dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imgInfo"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:layout_toLeftOf="@+id/LLOpenInstagram"
            android:padding="5dp"
            android:src="@drawable/ic_about" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/heebo_medium"
            android:text="@string/how_to_download"
            android:textColor="@color/black"
            android:textSize="17sp" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/lnr_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/LLDownloadStep"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:paddingStart="10dp"
        android:paddingEnd="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_grey_bg"
            android:orientation="vertical"
            android:padding="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/heebo_regular"
                android:text="@string/paste_link_tittle"
                android:textColor="@color/black" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="10dp"
                app:cardElevation="0dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_text"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_centerVertical="true"
                    android:background="@android:color/transparent"

                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textColorHint="@color/grey"
                    android:textSize="15sp"
                    android:visibility="visible" />
            </androidx.cardview.widget.CardView>


            <LinearLayout
                android:id="@+id/RLDownloadLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="15dp"
                android:elevation="3dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/login_btn1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/rectangle_black_bg"
                    android:fontFamily="@font/heebo_regular"
                    android:gravity="center"
                    android:padding="14dp"
                    android:text="@string/download"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tv_paste"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/rectangle_primary_bg"
                    android:fontFamily="@font/heebo_regular"
                    android:gravity="center"
                    android:padding="14dp"
                    android:text="@string/paste_link"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="18sp" />


            </LinearLayout>


        </LinearLayout>


        <RelativeLayout
            android:id="@+id/RLLoginInstagram"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp">

            <TextView
                android:id="@+id/tvLoginInstagram"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:fontFamily="@font/heebo_regular"
                android:padding="10dp"
                android:text="@string/download_from_private_account"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <Switch
                android:id="@+id/switchLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:clickable="false"
                android:text=""
                android:theme="@style/SCBSwitch"
                android:thumbTint="@color/colorPrimary" />
        </RelativeLayout>
    </LinearLayout>


    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:adSize="BANNER"
        app:adUnitId="@string/admob_banner_ad" />
</RelativeLayout>
