<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:weightSum="2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="10dp"
        android:layout_weight="1">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <FrameLayout
                android:id="@+id/adsContainer"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="12dp">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    app:cardCornerRadius="5dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:layout_marginTop="25dp"
                            android:layout_marginBottom="25dp"
                            android:src="@drawable/main_bg" />
                    </LinearLayout>

                    <include
                        android:id="@+id/admob_native_container"
                        layout="@layout/admob_native_medium"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:visibility="gone" />
                </androidx.cardview.widget.CardView>
            </FrameLayout>
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/mainlin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:isScrollContainer="true"
        android:orientation="vertical"
        android:scrollbars="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/rvInsta"
                android:layout_width="0dp"
                android:layout_height="@dimen/standard_145"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@drawable/insta_bg"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/insta_logo"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="15dp"
                    android:padding="5dp"
                    android:src="@drawable/ic_instagram_tab"
                    android:tint="@color/white" />

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginRight="-20dp"
                    android:layout_marginBottom="-20dp"
                    android:alpha="0.2"
                    android:src="@drawable/ic_instagram_tab"
                    android:tint="@color/colorWhiteTransparent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/insta_logo"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="15dp"
                    android:fontFamily="@font/heebo_medium"
                    android:lineSpacingExtra="-4dp"
                    android:text="@string/title"
                    android:textColor="@color/white"
                    android:textSize="17sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rvWhatsApp"
                android:layout_width="0dp"
                android:layout_height="@dimen/standard_145"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@drawable/whatsapp_bg"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/whatsapp_logo"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="15dp"
                    android:padding="5dp"
                    android:src="@drawable/ic_whatsapp_tab"
                    android:tint="@color/white" />

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginRight="-20dp"
                    android:layout_marginBottom="-20dp"
                    android:alpha="0.2"
                    android:src="@drawable/ic_whatsapp_tab"
                    android:tint="@color/colorWhiteTransparent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/whatsapp_logo"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="15dp"
                    android:fontFamily="@font/heebo_medium"
                    android:text="@string/whatsapp"
                    android:textColor="@color/white"
                    android:textSize="17sp" />
            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="10dp"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardGallery"
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:layout_weight="0.2"
                android:orientation="vertical"
                app:cardBackgroundColor="@color/cardBg"
                app:cardCornerRadius="15dp"
                app:cardPreventCornerOverlap="false"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/gallery"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:src="@drawable/ic_gallery" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:fontFamily="@font/heebo_medium"
                        android:text="@string/gallery"
                        android:textColor="@color/black"
                        android:textSize="15sp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardShareApp"
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:layout_marginLeft="10dp"
                android:layout_weight="0.2"
                android:orientation="vertical"
                app:cardBackgroundColor="@color/cardBg"
                app:cardCornerRadius="15dp"
                app:cardPreventCornerOverlap="false"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/im_shareApp"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:src="@drawable/ic_share" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:fontFamily="@font/heebo_medium"
                        android:text="@string/share"
                        android:textColor="@color/black"
                        android:textSize="15sp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardRateApp"
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:layout_marginLeft="10dp"
                android:layout_weight="0.2"
                android:orientation="vertical"
                app:cardBackgroundColor="@color/cardBg"
                app:cardCornerRadius="15dp"
                app:cardPreventCornerOverlap="false"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/im_rateApp"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:src="@drawable/ic_rate_us" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:fontFamily="@font/heebo_medium"
                        android:text="@string/rate_app_name"
                        android:textColor="@color/black"
                        android:textSize="15sp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            app:adSize="BANNER"
            app:adUnitId="@string/admob_banner_ad" />
    </RelativeLayout>
</LinearLayout>
